<resources>
    <string name="app_name">SportFinder</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="esqueci_a_passe">Esqueci-me da Password</string>

    <string name="submissoes">Submissões</string>
    <string name="rating">Rating</string>

    <string name="search">Pesquisar</string>
    <string name="add">Adicionar</string>
    <string name="favorites">Favoritos</string>
    <string name="stats">Stats</string>
    <string name="ranking">Ranking</string>
    <string name="account">Conta</string>

    <string name="search_hint">Pesquisar...</string>
    <string name="text_continue">Continuar</string>

    <string name="email">Email</string>
    <string name="username">Nome de Utilizador</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirmar Password</string>

    <!-- secção de erros -->
    <string name="warningUsernameEmpty">Insira um Username</string>
    <string name="warningUsernameExist">Username já existente</string>

    <string name="warningEmailEmpty">Insira um Email</string>
    <string name="warningEmailExist">Email já existente</string>
    <string name="warningEmailInvalid">Email inválido.</string>

    <string name="warningPasswordEmpty">Insira uma Password</string>
    <string name="warningConfirmPasswordEmpty">Insira a confirmação da Password</string>
    <string name="wartningPasswordNotMatch">As passwords não coincidem</string>
    <string name="wartningPasswordRestriction">A password deve conter: A-Z, a-z e números. Minímo de 8 caracteres. </string>

    <string name="warningEmailInUse">Email inserido já em uso</string>
    <string name="warningcredentialsInvalid">Credenciais inválidas</string>

    <string name="chooseSport">Escolha pelo menos um Desporto!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="citySearch_hint">Cidade...</string>

    <string name="spotDetailed_direcoes">Direções</string>
    <string name="spotDetailed_avaliacao">Avaliação</string>

    <string name="spotsFound_noSpot">Nenhum local encontrado para a sua localização atual</string>
</resources>
