<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainmenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_rectangle"
    >

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="40dp"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="20dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/background_rectangle_gray" />

        <RelativeLayout
            android:id="@+id/whiteBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="40dp"
            android:padding="10dp"
            android:background="@drawable/background_card"
            >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:isScrollContainer="false"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="50dp"
                    android:layout_marginHorizontal="20dp"
                    >

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/background_circle"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:layout_margin="10dp"
                        >

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:background="@drawable/ic_icon_add_profilepic"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="Escolher foto de perfil"
                            android:textAlignment="center"
                            android:textColor="@color/colorBlack"
                            android:textSize="13dp"
                            />


                    </LinearLayout>

                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:inputType="text"
                        android:layout_marginVertical="5dp"
                        />

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:layout_marginVertical="5dp"
                        android:inputType="textEmailAddress"
                        />

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:layout_marginVertical="5dp"
                        android:inputType="textPassword"
                        />

                    <EditText
                        android:id="@+id/et_confirmarPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:layout_marginVertical="5dp"
                        android:inputType="textPassword"
                        />

                    <TextView
                        android:id="@+id/txtWarnings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text=""
                        android:textColor="#ff0000"
                        android:paddingVertical="2dp"
                        />

                </LinearLayout>
            </ScrollView>

            <Button

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_button_confirm"
                android:text="@string/criar_conta"
                android:textColor="@color/colorWhite"
                android:layout_alignParentBottom="true"
                />

        </RelativeLayout>




    </RelativeLayout>

</LinearLayout>
